feat: draw animal as triangles on canvas

--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <canvas id="viewport"></canvas>
+    <canvas id="viewport" width="800" height="800"></canvas>
     <script src="./bootstrap.js"></script>
 </body>
 
