--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Go - Learning To Fly</title>
         <link rel="stylesheet" href="style.css" />
-        <script src="index.js" type="module"></script>
         <!-- <script src="./bootstrap.js"></script> -->
         <script src="static/js/wasm_exec.js"></script>
         <script>
@@ -21,13 +20,15 @@
             console.log({ go });
             console.log(go.importObject);
             WebAssembly.instantiateStreaming(
-                fetch("static/js/simwasm.wasm"),
+                fetch("static/js/page.wasm"),
                 go.importObject
             ).then((result) => {
                 console.log({ result });
                 go.run(result.instance);
             });
         </script>
+        <script defer src="index.js" type="application/wasm"></script>
+        <!-- <script src="index.js" type="module"></script> -->
     </head>
 
     <body>
